# sdd-workshop

./: .gitignore  README.md  pyproject.toml  todo.db
.github/: copilot-instructions.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
cli/: __init__.py  commands.py  main.py
specs/001-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-app/checklists/: requirements.md
specs/001-todo-app/contracts/: cli-interface.md
tests/: test_cli.py  test_repository.py  test_services.py
todo_lib/: __init__.py  database.py  models.py  repository.py  services.py
